--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -71,7 +71,7 @@ import LinkIcon from './Icons/LinkIcon.astro'
 
 {
     PROJECTS.map(({title, description, github, link, images, tecnologies})=>(
-    <div class={` max-w-[80%] bg-red-950/30 border border-gray-200 rounded-lg shadow dark:bg-red-950/30 dark:border-gray-700 my-8 mx-auto slide-left ${Astro.props.class}`}>
+    <div class={` max-w-[95%] md:max-w-[80%] bg-red-950/30 border border-gray-200 rounded-lg shadow dark:bg-red-950/30 dark:border-gray-700 my-8 mx-auto slide-left ${Astro.props.class}`}>
             <a>
                 <img src={images} class="rounded-t-lg slide-left" alt="">
             </a>
