--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -28,15 +28,66 @@
     ]
 ---
 
-<header class="flex justify-center items-center py-3 w-full xl:w-[740px] mx-auto rounded-full border border-red-200 shadow-md shadow-red-900/50 p-4 mt-2 sticky top-2 bg-gray-200 dark:bg-[#290500] z-50">
-    <nav class="flex flex-row lg:gap-x-10 gap-x-6 opacity-80 ">
+<header class="flex justify-between lg:justify-center items-center py-3 w-full xl:w-[740px] mx-auto rounded lg:rounded-full border border-x-red-200 shadow-md shadow-red-900/50 p-4 lg:mt-2 sticky top-0 lg:top-2 bg-red-200 dark:bg-[#290500] z-50">
+    <!-- Botón del menú hamburguesa -->
+    <button id="menu-toggle" class="block lg:hidden focus:outline-none">
+        <svg class="w-6 h-6" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path d="M4 6H20M4 12H20M4 18H20" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+        </svg>
+    </button>
+
+    <!-- Contenedor del menú -->
+    <nav id="menu" class="hidden lg:flex lg:flex-row lg:gap-x-10 gap-x-6 opacity-80 slide-left">
         {
-            ELEMENTS.map(element=>(
-            <a href={element.link} aria-label={element.label} class="hover:scale-110 transition hover:text-red-600">
-                {element.title}
-            </a>
+            ELEMENTS.map(element => (
+                <a href={element.link} aria-label={element.label} class="lg:hover:scale-110 transition hover:text-red-600">
+                    {element.title}
+                </a>
             ))
         }
     </nav>
 </header>
 
+<script>
+document.addEventListener('DOMContentLoaded', function () {
+    const menuToggle = document.getElementById('menu-toggle');
+    const menu = document.getElementById('menu');
+    const menuLinks = document.querySelectorAll('#menu a'); // Selecciona todos los enlaces dentro del menú
+
+    // Función para ocultar el menú
+    function hideMenu() {
+        menu?.classList.remove('open');
+    }
+
+    // Agrega un event listener al botón del menú hamburguesa para abrir y cerrar el menú
+    menuToggle?.addEventListener('click', function() {
+        menu?.classList.toggle('open');
+    });
+
+    // Agrega un event listener a cada enlace dentro del menú para ocultar el menú cuando se hace clic en uno
+    menuLinks.forEach(link => {
+        link.addEventListener('click', hideMenu);
+    });
+});
+</script>
+
+<style>
+    @media (max-width: 768px) {
+  #menu {
+    display: none;
+    position: absolute;
+    top: 50px; /* Ajusta esto según la altura de tu header */
+    left: 0;
+    right: 0;
+    background-color: #290500; /* Cambia el color de fondo según tu preferencia */
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1); /* Agrega sombra al menú */
+    padding: 10px;
+    z-index: 999; /* Asegúrate de que el menú aparezca encima de otros elementos */
+  }
+  
+  #menu.open {
+    display: flex;
+    flex-direction: column;
+  }
+}
+</style>
