--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -41,7 +41,7 @@ import CvIcon from '../components/Icons/CvIcon.astro'
 				<a
 					href="https://www.linkedin.com/in/sergiovallenari"
 					target="_blank"
-					class="flex justify-center items-center"
+					class="flex justify-center items-center mt-4 lg:mt-0"
 				>
 					<Badge>Ready to work</Badge>
 				</a>
