--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -28,7 +28,7 @@
     ]
 ---
 
-<header class="flex justify-between lg:justify-center items-center py-3 w-full xl:w-[740px] mx-auto rounded lg:rounded-full border border-x-red-200 shadow-md shadow-red-900/50 p-4 lg:mt-2 sticky top-0 lg:top-2 bg-red-200 dark:bg-[#290500] z-50">
+<header class="flex justify-between lg:justify-center items-center py-3 w-full xl:w-[740px] mx-auto rounded lg:rounded-full border border-x-red-200 shadow-md shadow-red-900/50 p-4 lg:mt-2 sticky top-0 lg:top-2 bg-red-400 dark:bg-[#290500] z-50">
     <!-- Botón del menú hamburguesa -->
     <button id="menu-toggle" class="block lg:hidden focus:outline-none">
         <svg class="w-6 h-6" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -37,11 +37,12 @@
     </button>
 
     <!-- Contenedor del menú -->
-    <nav id="menu" class="hidden lg:flex lg:flex-row lg:gap-x-10 gap-x-6 opacity-80 slide-left">
+    <nav id="menu" class="hidden lg:flex lg:flex-row lg:gap-x-10 gap-x-6 dark:bg-[#290500] bg-red-400">
         {
             ELEMENTS.map(element => (
-                <a href={element.link} aria-label={element.label} class="lg:hover:scale-110 transition hover:text-red-600">
+                <a href={element.link} aria-label={element.label} class="lg:hover:scale-110 transition text-center hover:text-red-600 py-4 slide-left">
                     {element.title}
+                    <hr class="md:hidden">
                 </a>
             ))
         }
@@ -78,8 +79,7 @@ document.addEventListener('DOMContentLoaded', function () {
     position: absolute;
     top: 50px; /* Ajusta esto según la altura de tu header */
     left: 0;
-    right: 0;
-    background-color: #290500; /* Cambia el color de fondo según tu preferencia */
+    right: 0; /* Cambia el color de fondo según tu preferencia */
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1); /* Agrega sombra al menú */
     padding: 10px;
     z-index: 999; /* Asegúrate de que el menú aparezca encima de otros elementos */
