--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -125,8 +125,10 @@ import CvIcon from '../components/Icons/CvIcon.astro'
 			<p class="text-xl opacity-90 text-pretty slide-bottom">
 				Hola! Soy Sergio, músico y programador web. Comencé mi carrera como programador en el 2021 cuando pude comprarme mi primera PC, desde ese entonces fui estudiando de manera autodidacta, leyendo documentación o viendo videos por internet. Aprendí sobre <span class="font-bold text-red-600  dark:text-red-400 opacity-80">HTML, CSS y Javascript</span> lo cual me motivó para adentrarme en este maravilloso mundo.
 				<br>En el 2022 hice una diplomatura en Programación Web Fullstack, adquiriendo asi conocimientos sobre <span class="font-bold text-red-600 dark:text-red-400 opacity-80">PHP y MySQL</span>.
-				<br> 
-				<br>
+			</p>
+			<br> 
+			<br>
+			<p class="text-xl opacity-90 text-pretty slide-bottom">
 				Luego apliqué al bootcamp <span class="font-bold text-yellow-600">SoyHenry</span> en donde aprendi sobre <span class="font-bold text-red-600 dark:text-red-400 opacity-80">React, ExpressJs, NodeJs, Sequelize, PostgreSQL, Redux y más.</span> Tuve el honor de ganar el concurso a uno de los tres mejores proyectos integradores de este bootcamp y quedar seleccionado como el <span class="font-bold text-yellow-600">HENRY ROCKSTAR</span> de mi cohorte. Actualmente continúo reforzando mis conocimientos, aprendiendo nuevas tecnologías y creando proyectos personales y para clientes.
 				<br>
 				<br>
