--- a/src/components/Badge.astro
+++ b/src/components/Badge.astro
@@ -1,1 +1,54 @@
-<span class="bg-red-400 text-slate-700 text-xs font-medium me-2 px-2.5 py-2 lg:mt-2 rounded-full dark:bg-red-900 dark:text-white hover:scale-110 transition"><slot></slot></span>
+<span
+    class="text-xs font-medium me-2 px-2.5 py-2 lg:mt-2 rounded-full hover:scale-105 transition buttonBadge"
+    ><slot /></span
+>
+
+<style>
+    .buttonBadge {
+        background: rgba(187, 47, 47, 0.918);
+        cursor: pointer;
+        border: none;
+        color: azure;
+        font-size: 15px;
+        font-weight: bold;
+        position: relative;
+        border-radius: 12px;
+    }
+
+    .buttonBadge::before {
+        content: "";
+        position: absolute;
+        top: 0;
+        left: 0;
+        z-index: -1;
+        width: 100%;
+        height: 100%;
+        background: linear-gradient(
+            45deg,
+            rgb(97, 0, 0),
+            rgb(255, 0, 0),
+            rgb(97, 0, 0),
+            rgba(255, 0, 0),
+            rgb(97, 0, 0),
+            rgba(255, 0, 0),
+            rgb(97, 0, 0)
+        );
+        background-size: 800%;
+        border-radius: 12px;
+        filter: blur(8px);
+        animation: glowing 45s linear infinite;
+    }
+    @keyframes glowing {
+        0% {
+            background-position: 0 0;
+        }
+
+        50% {
+            background-position: 400% 0;
+        }
+
+        100% {
+            background-position: 0 0;
+        }
+    }
+</style>
