--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -28,7 +28,7 @@
     ]
 ---
 
-<header class="flex justify-between lg:justify-center items-center py-3 lg:py-0 w-full xl:w-[740px] mx-auto rounded lg:rounded-full border border-x-red-200 shadow-md shadow-red-900/50 p-4 lg:mt-2 sticky top-0 lg:top-2 bg-red-400 dark:bg-[#290500] z-50">
+<header class="flex justify-between lg:justify-center items-center py-3 lg:py-0 w-full xl:w-[740px] mx-auto rounded lg:rounded-full border border-x-red-200 shadow-md shadow-red-900/50 p-4 lg:mt-2 sticky top-0 lg:top-2 bg-red-600 dark:bg-[#290500] z-50">
     <!-- Botón del menú hamburguesa -->
     <button id="menu-toggle" class="block lg:hidden focus:outline-none">
         <svg class="w-6 h-6" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -37,10 +37,10 @@
     </button>
 
     <!-- Contenedor del menú -->
-    <nav id="menu" class="hidden lg:flex lg:flex-row lg:gap-x-10 gap-x-6 dark:bg-[#290500] bg-red-400">
+    <nav id="menu" class="hidden lg:flex lg:flex-row lg:gap-x-10 gap-x-6 dark:bg-[#290500] bg-red-600">
         {
             ELEMENTS.map(element => (
-                <a href={element.link} aria-label={element.label} class="lg:hover:scale-110 transition text-center hover:text-red-600 py-4 slide-left">
+                <a href={element.link} aria-label={element.label} class="lg:hover:scale-110 text-white transition text-center hover:text-red-200 py-4 slide-left">
                     {element.title}
                     <hr class="md:hidden">
                 </a>
