--- a/src/components/Social.astro
+++ b/src/components/Social.astro
@@ -1,5 +1,5 @@
 <a
-   class="rounded-full border border-white/10 flex justify-center items-center gap-x-2 py-2 px-4 bg-red-400/80 dark:bg-white/5 hover:scale-105 transition hover:bg-red-600"
+   class="rounded-full border border-white/10 flex justify-center items-center gap-x-2 py-2 px-4 bg-red-600 dark:bg-white/5 hover:scale-105 transition hover:bg-red-400 hover:shadow-md"
    href={Astro.props.href}
    target="_blank"
 >
