--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -35,7 +35,7 @@ import CvIcon from '../components/Icons/CvIcon.astro'
 				class="rounded-full mx-auto size-96 object-cover mb-6"
 			/>
 			<h1
-				class="text-3xl md:text-4xl lg:text-4xl xl:text-5xl font-bold md:flex md:flex-row gap-x-4 pb-10 text-pretty"
+				class="text-3xl md:text-4xl lg:text-4xl xl:text-5xl font-bold md:flex md:flex-row gap-x-4 pb-10 text-pretty items-center justify-center text-center"
 			>
 				Hola! Soy <span class="text-red-600">Sergio</span>
 				<a
@@ -46,16 +46,16 @@ import CvIcon from '../components/Icons/CvIcon.astro'
 					<Badge>Ready to work</Badge>
 				</a>
 			</h1>
-			<h2 class="text-xl opacity-90 text-pretty p-2">
+			<h2 class="text-xl opacity-90 p-2 text-center">
 				Desarrollador Web Junior con experiencia en <span
-					class="font-bold text-red-400 opacity-80"
+					class="font-bold text-red-600"
 					>JavaScript, React, Node.js y Redux Toolkit</span
 				>, así como en bases de datos relacionales como
 				<span class="font-bold opacity-80">MySQL y PostgreSQL</span>.
 				Destacado por habilidades colaborativas, contribuyendo al éxito
 				del equipo y alcanzando objetivos compartidos.
 			</h2>
-			<nav class="flex md:flex-row flex-col md:gap-y-0 gap-y-2 gap-x-2 lg:gap-x-4 mt-8">
+			<nav class="flex md:flex-row flex-col md:gap-y-0 gap-y-2 gap-x-2 lg:gap-x-4 mt-8 items-center justify-center" >
 				<Social href="https://www.linkedin.com/in/sergiovallenari">
 					<LinkedinIcon class="size-6" />
 					Linkedin
@@ -116,24 +116,29 @@ import CvIcon from '../components/Icons/CvIcon.astro'
 		</SectionContainer>
 		<SectionContainer id="sobre-mi" class="py-32">
 			<hr class="mb-6">
-			<h2
-				class="text-4xl font-bold flex flex-row gap-x-4 pb-10 items-center"
-			>
+			<h2 class="text-4xl font-bold flex flex-row gap-x-4 pb-10 items-center">
 				<AboutIcon class="size-6" />
 				Sobre mí
 			</h2>
-			<p class="text-xl opacity-90 text-pretty slide-bottom">
-				Hola! Soy Sergio, músico y programador web. Comencé mi carrera como programador en el 2021 cuando pude comprarme mi primera PC, desde ese entonces fui estudiando de manera autodidacta, leyendo documentación o viendo videos por internet. Aprendí sobre <span class="font-bold text-red-600  dark:text-red-400 opacity-80">HTML, CSS y Javascript</span> lo cual me motivó para adentrarme en este maravilloso mundo.
-				<br>En el 2022 hice una diplomatura en Programación Web Fullstack, adquiriendo asi conocimientos sobre <span class="font-bold text-red-600 dark:text-red-400 opacity-80">PHP y MySQL</span>.
-			</p>
-			<br> 
-			<br>
-			<p class="text-xl opacity-90 text-pretty slide-bottom">
-				Luego apliqué al bootcamp <span class="font-bold text-yellow-600">SoyHenry</span> en donde aprendi sobre <span class="font-bold text-red-600 dark:text-red-400 opacity-80">React, ExpressJs, NodeJs, Sequelize, PostgreSQL, Redux y más.</span> Tuve el honor de ganar el concurso a uno de los tres mejores proyectos integradores de este bootcamp y quedar seleccionado como el <span class="font-bold text-yellow-600">HENRY ROCKSTAR</span> de mi cohorte. Actualmente continúo reforzando mis conocimientos, aprendiendo nuevas tecnologías y creando proyectos personales y para clientes.
+			<div class="lg:flex items-center">
+				<img src="/Sergio2.png" alt="" class="md:hidden size-96 m-2 rounded-full mx-auto fade-in drop-shadow-2xl">
+			<div class="lg:w-[50%]">
+				<p class="text-xl opacity-90 text-pretty slide-bottom text-center">
+					Hola! Soy Sergio, músico y programador web. Comencé mi carrera como programador en el 2021 cuando pude comprarme mi primera PC, desde ese entonces fui estudiando de manera autodidacta, leyendo documentación o viendo videos por internet. Aprendí sobre <span class="font-bold text-red-600  dark:text-red-400 opacity-80">HTML, CSS y Javascript</span> lo cual me motivó para adentrarme en este maravilloso mundo.
+					<br>En el 2022 hice una diplomatura en Programación Web Fullstack, adquiriendo asi conocimientos sobre <span class="font-bold text-red-600 dark:text-red-400 opacity-80">PHP y MySQL</span>.
+				</p>
+				<br> 
 				<br>
-				<br>
-				<span class="flex"><CvIcon class="mx-4"/><a href="/SergioVallenari.pdf" target="_blank">Este es mi CV</a></span>
-			</p>
+				<p class="text-xl opacity-90 text-pretty slide-bottom text-center">
+					Luego apliqué al bootcamp <span class="font-bold text-yellow-600">SoyHenry</span> en donde aprendi sobre <span class="font-bold text-red-600 dark:text-red-400 opacity-80">React, ExpressJs, NodeJs, Sequelize, PostgreSQL, Redux y más.</span> Tuve el honor de ganar el concurso a uno de los tres mejores proyectos integradores de este bootcamp y quedar seleccionado como el <span class="font-bold text-yellow-600">HENRY ROCKSTAR</span> de mi cohorte. Actualmente continúo reforzando mis conocimientos, aprendiendo nuevas tecnologías y creando proyectos personales y para clientes.
+					<br>
+					<br>
+					<span class="rounded-full border border-black/10 hover:scale-105 transition bg-red-600 flex justify-center items-center gap-x-2 py-2 px-4"><CvIcon class="mx-4"/><a href="/SergioVallenari.pdf" target="_blank">Este es mi CV</span></a>
+				</p>
+
+			</div>
+				<img src="/Sergio2.png" alt="" class="hidden md:block size-96 m-2 rounded-full mx-auto fade-in drop-shadow-2xl">
+			</div>
 		</SectionContainer>
 	</main>
 </Layout>
