--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -137,7 +137,7 @@ import CvIcon from '../components/Icons/CvIcon.astro'
 				</p>
 
 			</div>
-				<img src="/Sergio2.png" alt="" class="hidden md:block size-96 m-2 rounded-full mx-auto fade-in drop-shadow-2xl">
+				<img src="/Sergio2.png" alt="" class="hidden md:block size-96 m-2 rounded-full mx-auto fade-in drop-shadow-2xl object-contain">
 			</div>
 		</SectionContainer>
 	</main>
