--- a/src/components/ExperienceItem.astro
+++ b/src/components/ExperienceItem.astro
@@ -6,10 +6,20 @@ interface Props {
     link?: string;
     other?: string;
 }
-const { date, title, description, link, other} = Astro.props;
+const { date, title, description, link, other } = Astro.props;
+
+const titleSplit = title.split("-");
+const titleFormatted = titleSplit.length > 1 ? titleSplit[1].trim() : titleSplit[0].trim();
+
 ---
 
-{other && <h2 class="flex items-center mb-6 text-xl font-semibold dark:text-red-100/90 dark:text-white">{other}</h2>}
+{
+    other && (
+        <h2 class="flex items-center mb-6 text-xl font-semibold dark:text-red-100/90 dark:text-white">
+            {other}
+        </h2>
+    )
+}
 <span
     class="absolute flex items-center justify-center w-6 h-6 bg-red-900 rounded-full -start-3 ring-8 ring-red-950 dark:ring-red-950 dark:bg-red-900"
 >
@@ -45,7 +55,7 @@ const { date, title, description, link, other} = Astro.props;
             class="inline-flex items-center px-4 py-2 text-sm font-medium text-gray-900 bg-white border border-gray-200 rounded-lg hover:bg-gray-100 hover:text-blue-700 focus:z-10 focus:ring-4 focus:outline-none focus:ring-red-200 focus:text-red-600 dark:bg-gray-800 dark:text-gray-400 dark:border-gray-600 dark:hover:text-white dark:hover:bg-gray-700 dark:focus:ring-gray-700"
         >
             {" "}
-            Drewili{" "}
+            {titleFormatted}{" "}
         </a>
     )
 }
