--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -5,8 +5,15 @@ const EXPERIENCE = [
     {
         date: "Mar. 2024 - actualidad",
         title: "Fullstack Developer - Eurekaplicaciones",
-        description: "Brindo soporte técnico y actualizaciones a aplicaciones web existentes. Colaboro en el diseño y la implementación de nuevas características y funcionalidades. Trabajo en equipo para garantizar la entrega oportuna de proyectos según los requisitos del cliente. Participo en la resolución de problemas y la optimización del rendimiento de las aplicaciones. Mantengo un enfoque proactivo en la mejora continua de los procesos de desarrollo y la calidad del código.",
+        description:
+            "Brindo soporte técnico y actualizaciones a aplicaciones web existentes. Colaboro en el diseño y la implementación de nuevas características y funcionalidades. Trabajo en equipo para garantizar la entrega oportuna de proyectos según los requisitos del cliente. Participo en la resolución de problemas y la optimización del rendimiento de las aplicaciones. Mantengo un enfoque proactivo en la mejora continua de los procesos de desarrollo y la calidad del código.",
         link: "https://eurekaplicaciones.com",
+    },
+    {
+        date: "Oct. 2024 - actualidad",
+        title: "Full Stack Developer - Don Faustino",
+        description:
+            "Aplicación web de gestión de restaurantes (React, NodeJS, MySQL, Capacitor). Permite la administración de stock y mercadería con alertas de stock bajo, registro y control de ventas en tiempo real (comandas), generación de reportes detallados de ventas diarias, semanales y mensuales, y la creación y gestión de la carta con cálculo automático de costos y ganancias por plato. Actualmente, brindo soporte y mantenimiento para mejoras y optimización del sistema."
     },
     {
         date: "dic. 2023 - ene. 2024",
