--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -24,6 +24,7 @@ import SequelizeIcon from "../components/Icons/SequelizeIcon.astro";
 import AstroIcon from "../components/Icons/AstroIcon.astro";
 import AboutIcon from "../components/Icons/AboutIcon.astro";
 import CvIcon from '../components/Icons/CvIcon.astro'
+import Angular from "../components/Icons/Angular.astro";
 ---
 
 <Layout title="Sergio Vallenari, Programador Web">
@@ -92,6 +93,7 @@ import CvIcon from '../components/Icons/CvIcon.astro'
 				<CssIcon class="size-12 lg:size-20" />
 				<SequelizeIcon class="size-12 lg:size-20" />
 				<AstroIcon class="size-12 lg:size-20" />
+				<Angular class="size-12 lg:size-20"/>
 			</SectionContainer>
 		</SectionContainer>
 		<SectionContainer class="mt-20" id="experiencia">
